--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
      <script>
       
       const copy = () => {
-        navigator.clipboard.writeText('https://homepagehhc.github.io/gianghuelam/')
+        navigator.clipboard.writeText('https://homepagehhc.github.io/giaan/')
       }
       const button = document.querySelector('.share__button')
       const url = document.querySelector('.url-text')
